{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 12,
  "lineage": "db6ee2fe-d907-008d-aff8-91b54609b035",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-rapiddeploy-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00a02ffa52634e97c",
            "owner_id": "146452989591",
            "tags": {
              "Name": "eks-rd-gw"
            },
            "vpc_id": "vpc-0ed60248a216c6b5c"
          },
          "dependencies": [
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-eks-rd-routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0727e261e9618ee56",
            "owner_id": "146452989591",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a02ffa52634e97c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0ed60248a216c6b5c"
          },
          "dependencies": [
            "aws_internet_gateway.eks-rapiddeploy-gw",
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rapiddeploy-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:146452989591:security-group/sg-01d0a76648ad4af1f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d0a76648ad4af1f",
            "ingress": [],
            "name": "terraform-eks-rapiddeploy-cluster",
            "name_prefix": null,
            "owner_id": "146452989591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-rapiddeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed60248a216c6b5c"
          },
          "dependencies": [
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rapiddeploy-cluster-ingress-workstation-https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "71.239.129.162/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1630905474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01d0a76648ad4af1f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.rapiddeploy-cluster",
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "71.57.76.171/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3015421612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01d0a76648ad4af1f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.rapiddeploy-cluster",
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-rapiddeploy-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:146452989591:subnet/subnet-01ec6b757f5f93af7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01ec6b757f5f93af7",
            "map_public_ip_on_launch": false,
            "owner_id": "146452989591",
            "tags": {
              "Name": "terraform-eks-rd-node",
              "kubernetes.io/cluster/eks-rd": "shared"
            },
            "vpc_id": "vpc-0ed60248a216c6b5c"
          },
          "dependencies": [
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:146452989591:subnet/subnet-0c7213e78ecd9f44b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c7213e78ecd9f44b",
            "map_public_ip_on_launch": false,
            "owner_id": "146452989591",
            "tags": {
              "Name": "terraform-eks-rd-node",
              "kubernetes.io/cluster/eks-rd": "shared"
            },
            "vpc_id": "vpc-0ed60248a216c6b5c"
          },
          "dependencies": [
            "aws_vpc.eks-rapiddeploy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-rapiddeploy-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:146452989591:vpc/vpc-0ed60248a216c6b5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002197de8ed6b67a0",
            "default_route_table_id": "rtb-0a021f3c23ce32d54",
            "default_security_group_id": "sg-0bb3cf60b91cf64dd",
            "dhcp_options_id": "dopt-d00228b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ed60248a216c6b5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a021f3c23ce32d54",
            "owner_id": "146452989591",
            "tags": {
              "Name": "terraform-eks-rd-node",
              "kubernetes.io/cluster/eks-rd": "shared"
            }
          }
        }
      ]
    }
  ]
}